# franken_node

./: .cargo-mutants.toml  .gitignore  .rchignore  .swarm-tick.sh  .ubsignore  AGENTS.md  AUDIT_FINDINGS_2026_04_20.md  BD_IWA3Z_IMPLEMENTATION.md  BD_P9MPD5_IMPLEMENTATION.md  BD_P9MPD7_IMPLEMENTATION.md  BD_SH95A_IMPLEMENTATION.md  CHANGELOG.md  COMMIT_STANDARDS.md  Cargo.toml  MODE_OUTPUT_B1.md  MODE_OUTPUT_F4.md  MODE_OUTPUT_F5.md  MODE_OUTPUT_G1.md  MODE_OUTPUT_H1.md  MODE_OUTPUT_H2.md  MODE_OUTPUT_I4.md  MODE_OUTPUT_L2.md  PLAN_TO_CREATE_FRANKEN_NODE.md  README.md  deny.toml  get_golden_hashes.rs  install.ps1  install.sh  run_all_checks.py  syntax_check.rs  test_hygiene.rs  test_race_condition_fix.rs  test_validation_readiness_compile.rs  update_golden_hashes.sh
crates/franken-node/: Cargo.toml  build.rs
crates/franken-node/benches/: anti_entropy_insert_bench.rs  blake3_performance_bench.rs  crypto_scheme_bench.rs  dgis_large_graph_bench.rs  evidence_ledger_performance.rs  migrate_tree_sitter_bench.rs  perf_wins.rs  replay_bundle_gzip_bench.rs  threshold_sig_verify_bench.rs  trust_card_canonical_bench.rs  vef_proof_chain_bench.rs
crates/franken-node/fuzz/: Cargo.toml
crates/franken-node/src/: capacity_defaults.rs  cli.rs  config.rs  lib.rs  main.rs  operator_json_contracts.rs  schema_versions.rs  schema_versions_byte_layout_golden.rs
crates/franken-node/tests/: activation_pipeline_metamorphic.rs  adjacent_claim_language_gate.rs  adversarial_compromise_reduction_tampering.rs  adversarial_detection_latency.rs  adversarial_remote_cap_replay.rs  adversarial_supply_chain_poisoning.rs  adversarial_trust_card_forgery.rs  anti_entropy_reconciliation_loom.rs  api_session_auth_real_service_integration.rs  artifact_gate_goldens.rs  artifact_signing_golden_tests.rs  artifact_signing_key_loading.rs  artifact_signing_metamorphic.rs  asupersync_control_lane_integration.rs  atc_signal_extractor_integration.rs  atc_sketches_integration.rs  auth_failure_limiter_loom.rs  bayesian_risk_quarantine.rs  bd_15u3_decision_engine_conformance.rs  bd_1daz_retroactive_hardening_conformance.rs  bd_1fp4_integrity_sweep_scheduler_conformance.rs  bd_1m8r_revocation_freshness_gate_conformance.rs  bd_1zym_hardening_auto_trigger_conformance.rs  bd_91gg_repair_controller_conformance.rs  bd_sddz_correctness_envelope_conformance.rs  bd_sh3_approval_workflow_conformance.rs  bench_conformance_matrix.rs  bench_run_e2e.rs  bounded_input_policy_contract.rs  cancellation_protocol_conformance.rs  canonical_serializer_conformance.rs  canonical_serializer_fuzz_harness.rs  canonical_serializer_metamorphic.rs  canonical_serializer_real_inputs.rs  capability_artifact_real_inputs.rs  cas_effect_receipt_conformance.rs  category_shift_real_inputs.rs  challenge_flow_timing_attack_resistance.rs  challenge_response_conformance.rs  claims_proptest.rs  (+229 more)
crates/franken-security-macros/: Cargo.toml
crates/franken-security-macros/src/: lib.rs
crates/franken-security-macros/tests/: secure_hash_contract.rs
fuzz/: Cargo.toml
fuzz/artifacts/fuzz_extension_registration_manifest_parse/: crash-042c08b9bde40c065f082bb5f0984d1145e85669
fuzz/config/: fuzz_budget.toml
fuzz/corpus/fuzz_cleanup_receipts_storage/: boundary  large
fuzz/corpus/fuzz_evidence_ledger_jsonl_spill/: minimal_valid.jsonl
fuzz/corpus/fuzz_frankensqlite_adapter_auth_ops/: large  minimal_valid
fuzz/corpus/fuzz_retrievability_gate_proof_verification/: large
fuzz/corpus/fuzz_rewrite_suggestion_engine/: boundary  large
fuzz/corpus/fuzz_system_metrics_exporter/: boundary  large
fuzz/corpus/fuzz_validation_proof_economics/: boundary  large
fuzz/corpus/fuzz_witness_ref_validation/: boundary  large
fuzz/corpus/migration/: adversarial_circular_ref.txt  adversarial_conflicting_versions.txt  adversarial_deep_nesting.txt  adversarial_diamond_deps.json  adversarial_empty_version.json  adversarial_file_dep.json  adversarial_git_dep.json  adversarial_huge_dep_tree.txt  adversarial_newline_name.json  adversarial_script_inject.json  adversarial_self_dep.json  adversarial_special_chars.txt  adversarial_star_version.json  adversarial_surrogate.txt  adversarial_traversal_02.txt  adversarial_unicode_rtl.txt  adversarial_url_dep.json  boundary_empty_deps.json  boundary_empty_name.json  boundary_huge_minor.json  boundary_many_slashes.txt  boundary_no_deps.json  boundary_whitespace_name.json  boundary_zero_version.json  malformed_bom.txt  malformed_deps_array.json  (+12 more)
fuzz/coverage/: latest_migration.json  latest_shim.json
fuzz/fuzz_targets/: canonical_encoder_parity.rs  ed25519_preparsed_parity.rs  fuzz_adversary_graph_replay.rs  fuzz_api_request_deserialization.rs  fuzz_api_traceparent_parse.rs  fuzz_audience_token_deserialize.rs  fuzz_baseline_csv_parser.rs  fuzz_blocked_proof_rehydration_input.rs  fuzz_blocked_proof_rehydration_plan.rs  fuzz_cancellation_protocol_transitions.rs  fuzz_canonical_decode_boundary.rs  fuzz_capability_token_parser.rs  fuzz_checksum_manifest_parse_canonical.rs  fuzz_claim_compiler_external_claim.rs  fuzz_cleanup_receipts_storage.rs  fuzz_cli_path_validation.rs  fuzz_cmdline_parse.rs  fuzz_compat_gates_key_id_from_bytes.rs  fuzz_config_env_parsing.rs  fuzz_config_toml_parse.rs  fuzz_config_toml_parsing.rs  fuzz_connector_method_validator_contract.rs  fuzz_constant_time_comparison.rs  fuzz_contagion_graph_validate.rs  fuzz_cookie_parse.rs  fuzz_counterfactual_receipt_verify.rs  fuzz_crypto_base64_decode.rs  fuzz_crypto_hex_decode.rs  fuzz_crypto_scheme_cross_domain.rs  fuzz_crypto_scheme_roundtrip.rs  fuzz_crypto_signature_verification.rs  fuzz_crypto_signer_chain.rs  fuzz_cuckoo_filter_insert_contains_remove.rs  fuzz_decision_receipt_verify.rs  fuzz_degraded_mode_audit_validate.rs  fuzz_deterministic_seed_derivation.rs  fuzz_deterministic_seed_encoding.rs  fuzz_dgis_spof_detection.rs  fuzz_doctor_input_parsing.rs  fuzz_ed25519_public_key_hex_decode.rs  (+93 more)
fuzz/targets/: migration_dependency_resolve.rs  migration_directory_scan.rs  migration_package_parse.rs  shim_api_translation.rs  shim_type_coercion.rs
sdk/verifier/: Cargo.toml
(+3481 files in other folders)
