[workspace]
members = [
  "crates/franken-node",
  "crates/franken-security-macros",
  "sdk/verifier",
]
exclude = [
  "fuzz",
  "crates/franken-node/fuzz",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["Franken Node Contributors"]
# The project ships the "MIT License (with OpenAI/Anthropic Rider)" (see ./LICENSE),
# NOT permissive MIT — the rider grants no rights to OpenAI/Anthropic (or anyone acting
# for them) and forbids incorporating the software into any ML training corpus or
# evaluation harness. Declaring bare `license = "MIT"` here would misrepresent those
# terms, so we use the SPDX LicenseRef form that points at the bundled LICENSE text.
license = "LicenseRef-MIT-OpenAI-Anthropic-Rider"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
frankentui = { package = "ftui", path = "../frankentui/crates/ftui", default-features = false }

[patch.crates-io]
fsqlite = { path = "../frankensqlite/crates/fsqlite" }
fsqlite-core = { path = "../frankensqlite/crates/fsqlite-core" }
fsqlite-types = { path = "../frankensqlite/crates/fsqlite-types" }
fsqlite-error = { path = "../frankensqlite/crates/fsqlite-error" }

# Profiling-only build profile. DO NOT REMOVE this section without first
# reading docs/dev/profiling.md (canonical reference) and
# tests/artifacts/perf/HISTORY.md. Every fingerprint.json under
# tests/artifacts/perf/<run-id>/ was built against this exact profile;
# removing it silently invalidates every historical hotspot table in
# this repo and breaks future profile_round handoffs. Concurrent-agent
# reverts of this section are tracked by bd-98xo5.11;
# scripts/check_release_perf_profile.py + a CI workflow gate
# (bd-98xo5.11.2) back-stop the docs at runtime.
[profile.release-perf]
inherits = "release"
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
strip = false
