[package]
name = "franken-node-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }
clap = "4.5.32"
# Remove rand_core feature to avoid randomness dependencies for deterministic fuzzing
ed25519-dalek = { version = "2.1.1" }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
toml = "0.8"
chrono = "0.4.44"
# Remove zeroize_derive to reduce proc-macro compilation overhead
zeroize = { version = "1.8.2" }

[dependencies.frankenengine-node]
path = "../crates/franken-node"
default-features = false
# Exclude heavy compilation dependencies for faster fuzz builds:
# - http-client: ureq/url (~1-2min savings)
# - external-commands: which/ctrlc (~30s savings)
features = [
    "test-support",
    "cbor-serialization",
    "extended-surfaces",
    "http-client",
    "external-commands",
]

[dependencies.frankenengine-verifier-sdk]
path = "../sdk/verifier"
features = ["fuzz"]

# Prevent fuzzing dependencies from leaking into production
[[bin]]
name = "fuzz_constant_time_comparison"
path = "fuzz_targets/fuzz_constant_time_comparison.rs"
test = false
doc = false

[[bin]]
name = "fuzz_threshold_signature_verification"
path = "fuzz_targets/fuzz_threshold_signature_verification.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_key_derivation"
path = "fuzz_targets/fuzz_epoch_key_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_epoch_validity"
path = "fuzz_targets/fuzz_epoch_validity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_intent_firewall"
path = "fuzz_targets/fuzz_intent_firewall.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ssrf_policy"
path = "fuzz_targets/fuzz_ssrf_policy.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_deserialization"
path = "fuzz_targets/fuzz_replay_bundle_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sdk_verifier_bundle_parsing"
path = "fuzz_targets/fuzz_sdk_verifier_bundle_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_request_deserialization"
path = "fuzz_targets/fuzz_api_request_deserialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_envelope_parsing"
path = "fuzz_targets/fuzz_trust_card_envelope_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ed25519_signature_boundaries"
path = "fuzz_targets/fuzz_ed25519_signature_boundaries.rs"
test = false
doc = false

[[bin]]
name = "fuzz_capability_token_parser"
path = "fuzz_targets/fuzz_capability_token_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_cap_token_parse"
path = "fuzz_targets/fuzz_remote_cap_token_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_compare_cbor"
path = "fuzz_targets/fuzz_trust_card_compare_cbor.rs"
test = false
doc = false

[[bin]]
name = "fuzz_trust_card_canonicalize"
path = "fuzz_targets/fuzz_trust_card_canonicalize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_cap_scope_check"
path = "fuzz_targets/fuzz_remote_cap_scope_check.rs"
test = false
doc = false

[[bin]]
name = "fuzz_sandbox_policy_parse"
path = "fuzz_targets/fuzz_sandbox_policy_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_connector_lifecycle_inputs"
path = "fuzz_targets/fuzz_connector_lifecycle_inputs.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_serializer_roundtrip"
path = "fuzz_targets/fuzz_canonical_serializer_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_serializer_deserialize"
path = "fuzz_targets/fuzz_canonical_serializer_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_chunking_export"
path = "fuzz_targets/fuzz_replay_bundle_chunking_export.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_bundle_adversarial_parse"
path = "fuzz_targets/fuzz_replay_bundle_adversarial_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_rewrite_rules"
path = "fuzz_targets/fuzz_migration_rewrite_rules.rs"
test = false
doc = false

[[bin]]
name = "fuzz_incident_bundle_parse"
path = "fuzz_targets/fuzz_incident_bundle_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_receipt_trust_card_roundtrip"
path = "fuzz_targets/fuzz_receipt_trust_card_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_release_manifest_parse"
path = "fuzz_targets/fuzz_release_manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_report_serialization"
path = "fuzz_targets/fuzz_migration_report_serialization.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_rollback"
path = "fuzz_targets/fuzz_migration_rollback.rs"
test = false
doc = false

[[bin]]
name = "fuzz_extension_registration_manifest_parse"
path = "fuzz_targets/fuzz_extension_registration_manifest_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_signed_registration_manifest"
path = "fuzz_targets/fuzz_parse_signed_registration_manifest.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vef_proof_input_envelope"
path = "fuzz_targets/fuzz_vef_proof_input_envelope.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fleet_decision_receipt_parse"
path = "fuzz_targets/fuzz_fleet_decision_receipt_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_evidence_ledger_entry_parse"
path = "fuzz_targets/fuzz_evidence_ledger_entry_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_counterfactual_receipt_verify"
path = "fuzz_targets/fuzz_counterfactual_receipt_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_engine_dispatcher_capability_validation"
path = "fuzz_targets/fuzz_engine_dispatcher_capability_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_doctor_input_parsing"
path = "fuzz_targets/fuzz_doctor_input_parsing.rs"
test = false
doc = false

[[bin]]
name = "fuzz_config_toml_parse"
path = "fuzz_targets/fuzz_config_toml_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_compromise_reduction_report_json"
path = "fuzz_targets/fuzz_compromise_reduction_report_json.rs"
test = false
doc = false

[[bin]]
name = "fuzz_evidence_ledger_jsonl_spill"
path = "fuzz_targets/fuzz_evidence_ledger_jsonl_spill.rs"
test = false
doc = false

[[bin]]
name = "fuzz_network_allowlist_entry_toml_parse"
path = "fuzz_targets/fuzz_network_allowlist_entry_toml_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_quarantine_audit_timestamp_rfc3339"
path = "fuzz_targets/fuzz_quarantine_audit_timestamp_rfc3339.rs"
test = false
doc = false

[[bin]]
name = "fuzz_crypto_scheme_roundtrip"
path = "fuzz_targets/fuzz_crypto_scheme_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "fuzz_crypto_scheme_cross_domain"
path = "fuzz_targets/fuzz_crypto_scheme_cross_domain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_crypto_signer_chain"
path = "fuzz_targets/fuzz_crypto_signer_chain.rs"
test = false
doc = false

[[bin]]
name = "fuzz_audience_token_deserialize"
path = "fuzz_targets/fuzz_audience_token_deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_blocked_proof_rehydration_input"
path = "fuzz_targets/fuzz_blocked_proof_rehydration_input.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vef_execution_receipt_validate"
path = "fuzz_targets/fuzz_vef_execution_receipt_validate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_checksum_manifest_parse_canonical"
path = "fuzz_targets/fuzz_checksum_manifest_parse_canonical.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decision_receipt_verify"
path = "fuzz_targets/fuzz_decision_receipt_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_contagion_graph_validate"
path = "fuzz_targets/fuzz_contagion_graph_validate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vef_policy_constraints_compile"
path = "fuzz_targets/fuzz_vef_policy_constraints_compile.rs"
test = false
doc = false

[[bin]]
name = "fuzz_repair_proof_verify"
path = "fuzz_targets/fuzz_repair_proof_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_ed25519_preparsed_parity"
path = "fuzz_targets/ed25519_preparsed_parity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_threshold_sig_parity"
path = "fuzz_targets/threshold_sig_parity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_canonical_encoder_parity"
path = "fuzz_targets/canonical_encoder_parity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_claim_compiler_external_claim"
path = "fuzz_targets/fuzz_claim_compiler_external_claim.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deterministic_seed_derivation"
path = "fuzz_targets/fuzz_deterministic_seed_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_transparency_verifier_inclusion"
path = "fuzz_targets/fuzz_transparency_verifier_inclusion.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cuckoo_filter_insert_contains_remove"
path = "fuzz_targets/fuzz_cuckoo_filter_insert_contains_remove.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fleet_decision_receipt_payload_hash"
path = "fuzz_targets/fuzz_fleet_decision_receipt_payload_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_replay_trace_canonical_digest"
path = "fuzz_targets/fuzz_replay_trace_canonical_digest.rs"
test = false
doc = false

[[bin]]
name = "fuzz_interface_hash_compute_verify"
path = "fuzz_targets/fuzz_interface_hash_compute_verify.rs"
test = false
doc = false

[[bin]]
name = "fuzz_reputation_deterministic_score"
path = "fuzz_targets/fuzz_reputation_deterministic_score.rs"
test = false
doc = false

[[bin]]
name = "fuzz_adversary_graph_replay"
path = "fuzz_targets/fuzz_adversary_graph_replay.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fleet_canonical_payload_float_rejection"
path = "fuzz_targets/fuzz_fleet_canonical_payload_float_rejection.rs"
test = false
doc = false

[[bin]]
name = "fuzz_safe_mode_parse_args"
path = "fuzz_targets/fuzz_safe_mode_parse_args.rs"
test = false
doc = false

[[bin]]
name = "fuzz_fork_detection_state_hash"
path = "fuzz_targets/fuzz_fork_detection_state_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_metrics_registry_record"
path = "fuzz_targets/fuzz_metrics_registry_record.rs"
test = false
doc = false

[[bin]]
name = "fuzz_perf_budget_guard_evaluate"
path = "fuzz_targets/fuzz_perf_budget_guard_evaluate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_hardening_state_machine_escalate"
path = "fuzz_targets/fuzz_hardening_state_machine_escalate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_degraded_mode_audit_validate"
path = "fuzz_targets/fuzz_degraded_mode_audit_validate.rs"
test = false
doc = false

[[bin]]
name = "fuzz_network_guard_egress_rule_match"
path = "fuzz_targets/fuzz_network_guard_egress_rule_match.rs"
test = false
doc = false

[[bin]]
name = "fuzz_connector_method_validator_contract"
path = "fuzz_targets/fuzz_connector_method_validator_contract.rs"
test = false
doc = false

[[bin]]
name = "fuzz_lease_coordinator_select"
path = "fuzz_targets/fuzz_lease_coordinator_select.rs"
test = false
doc = false

[[bin]]
name = "fuzz_quarantine_controller_action"
path = "fuzz_targets/fuzz_quarantine_controller_action.rs"
test = false
doc = false

[[bin]]
name = "fuzz_frankensqlite_adapter_auth_ops"
path = "fuzz_targets/fuzz_frankensqlite_adapter_auth_ops.rs"
test = false
doc = false

[[bin]]
name = "fuzz_retrievability_gate_proof_verification"
path = "fuzz_targets/fuzz_retrievability_gate_proof_verification.rs"
test = false
doc = false

[[bin]]
name = "fuzz_witness_ref_validation"
path = "fuzz_targets/fuzz_witness_ref_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validation_proof_economics"
path = "fuzz_targets/fuzz_validation_proof_economics.rs"
test = false
doc = false

[[bin]]
name = "fuzz_rewrite_suggestion_engine"
path = "fuzz_targets/fuzz_rewrite_suggestion_engine.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cleanup_receipts_storage"
path = "fuzz_targets/fuzz_cleanup_receipts_storage.rs"
test = false
doc = false

[[bin]]
name = "fuzz_system_metrics_exporter"
path = "fuzz_targets/fuzz_system_metrics_exporter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_cancellation_protocol_transitions"
path = "fuzz_targets/fuzz_cancellation_protocol_transitions.rs"
test = false
doc = false

[[bin]]
name = "fuzz_time_travel_engine_replay_validation"
path = "fuzz_targets/fuzz_time_travel_engine_replay_validation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_storage_content_hash"
path = "fuzz_targets/fuzz_storage_content_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_smoke_hash"
path = "fuzz_targets/fuzz_migration_smoke_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_migration_format_parse"
path = "fuzz_targets/fuzz_migration_format_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_api_traceparent_parse"
path = "fuzz_targets/fuzz_api_traceparent_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_observability_hash_update"
path = "fuzz_targets/fuzz_observability_hash_update.rs"
test = false
doc = false

[[bin]]
name = "fuzz_dgis_spof_detection"
path = "fuzz_targets/fuzz_dgis_spof_detection.rs"
test = false
doc = false

[[bin]]
name = "fuzz_federation_atc_sketches"
path = "fuzz_targets/fuzz_federation_atc_sketches.rs"
test = false
doc = false

[[bin]]
name = "fuzz_federation_participation_weighting"
path = "fuzz_targets/fuzz_federation_participation_weighting.rs"
test = false
doc = false

[[bin]]
name = "fuzz_federation_atc_reciprocity"
path = "fuzz_targets/fuzz_federation_atc_reciprocity.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_idempotency_derivation"
path = "fuzz_targets/fuzz_remote_idempotency_derivation.rs"
test = false
doc = false

[[bin]]
name = "fuzz_remote_computation_registry"
path = "fuzz_targets/fuzz_remote_computation_registry.rs"
test = false
doc = false

[[bin]]
name = "fuzz_frame_parser_guardrails"
path = "fuzz_targets/fuzz_frame_parser_guardrails.rs"
test = false
doc = false
