[package]
name = "frankenengine-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
clap = { version = "4.5.32", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
frankenengine-engine = { path = "../../../franken_engine/crates/franken-engine" }
frankenengine-extension-host = { path = "../../../franken_engine/crates/franken-extension-host" }

[dev-dependencies]
tempfile = "3.15"
